# obsidian-semantic-mcp

./: .dockerignore  .gitignore  .shipguard.yml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  LICENSE  README.md  docker-compose.yml  install.sh  obsidian_semantic_mcp.py  osm_init.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-hub.yml  tests.yml
.project-hooks/: pre-commit
docs/: RUNBOOK.md  SOUL.md
scripts/: osm  osm.ps1
src/: config.py  dashboard.py  server.py
tests/: conftest.py  test_dashboard_smoke.py  test_e2e.py  test_osm_commands.py  test_osm_init.py  test_setup.py  test_unit.py
