[project]
name = "obsidian-semantic-mcp"
version = "0.3.2"
description = "Semantic search MCP server for Obsidian vaults"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/celstnblacc/obsidian-semantic-mcp"
keywords = ["obsidian", "mcp", "semantic-search", "pgvector", "ollama", "claude"]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Scheduling",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp==1.26.0",
    "psycopg2-binary==2.9.11",
    "watchdog==6.0.0",
    "requests==2.32.5",
    "uvicorn==0.41.0",
    "starlette==0.52.1",
    "pyjwt==2.12.1",
    "httpx==0.28.1",
    "python-dotenv==1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
osm = "osm_init:main"

[tool.pytest.ini_options]
testpaths = ["tests/test_unit.py", "tests/test_osm_init.py", "tests/test_osm_commands.py"]
